--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,63 @@
     <string name="phonenumber_grid_item">0728765027</string>
     <string name="adress_grid_item">Strada Tudor Vladimirescu 700259</string>
     <string name="touristatraction_grid_item">Iasi City Tour Guide</string>
+    <!-- List of adresses item details -->
+    <string name="adress_club_coopers_lounge">Strada Tudor Vladimirescu,Nr. 56,CP 700259</string>
+    <string name="adress_club_fratelli">Strada Tudor Vladimirescu,Nr. 2,CP 700259</string>
+    <string name="adress_club_skin">Strada Constantin Mille,Nr. 4,CP 030167</string>
+    <string name="adress_club_babylon">Str Anastasie Panu,Nr. 1,CP 700020</string>
+    <string name="adress_club_master">Strada Țepeș Vodă,Nr. 1,CP 700259</string>
+    <string name="adress_room_master_escape">Bulevardul Socola,Nr. 22,CP 700187</string>
+    <string name="adress_zero_gravity_climbing">Strada Plopii fara Sot,Nr. 28,CP 700273</string>
+    <string name="adress_room_madscape">Soseaua Nationala,Nr. 180A,,CP 218994</string>
+    <string name="adress_hotel_international">Strada Palat,Nr. 5A,CP 700032</string>
+    <string name="adress_hotel_pleiada">Sos. Bucium,Nr. 18 B,CP 700282</string>
+    <string name="adress_hotel_bellaria">Soseaua Bucium,Nr. 7,CP 700280</string>
+    <string name="adress_hotel_il_primo">Strada Fericirii,Nr. 10,CP 707027</string>
+    <string name="adress_hotel_belleville">Strada Ciurchi,Nr. 21,CP 700313</string>
+    <string name="adress_hotel_hampton_by_hilton_iasi">St. Anastasie Panu,Nr.23,CP 2699999</string>
+    <string name="adress_hotel_ildis">Strada Muntenimii,Nr. 7,CP 99999</string>
+    <string name="adress_hotel_unirea_hotel_spa">Piata Unirii,Nr. 5,CP 700056</string>
+    <string name="adress_muzeul_universitatii">Strada Maiorescu Titu,Nr. 12,CP 700460</string>
+    <string name="phone_muzeul_universitatii">0232/201102/2451</string>
+    <string name="adress_muzeul_casa_dosoftei">Strada Panu Anastasie,Nr. 54,CP 700019</string>
+    <string name="phone_muzeul_casa_dosoftei">0232261070</string>
+    <string name="adress_muzeul_bojdeuca_creanga">Strada Simion Burnuiu,Nr. 4,CP 700118</string>
+    <string name="phone_muzeul_bojdeuca_creanga">0747499488</string>
+    <string name="adress_muzeul_union">Strada Alexandru Lapusneanu,Nr. 14,CP 700057</string>
+    <string name="phone_muzeul_union">0232340763</string>
+    <string name="adress_muzeul_municipal">Strada, Zmeu,Nr. 3,CP 700400</string>
+    <string name="phone_muzeul_municipal">02324839234</string>
+    <string name="adress_muzeul_mihail_sadoveanu">Aleea Sadoveanu Mihail,Nr. 12,CP 700489</string>
+    <string name="phone_muzeul_mihail_sadoveanu">0747499408</string>
+    <string name="adress_muzeul_metropolitan">Bd. Stefan cel Mare si Sfant,Nr.18,CP 700064</string>
+    <string name="phone_muzeul_metropolitan">0232479298</string>
+    <string name="adress_restaurant_panoramic">Piata Unirii,Nr.5, Etaj 13,CP 700056</string>
+    <string name="phone_restaurant_panoramic">0232205013</string>
+    <string name="adress_restaurant_oscar">Strada Lascar Catargi,Nr. 16,CP 700107</string>
+    <string name="phone_restaurant_oscar">0745245251</string>
+    <string name="adress_restaurant_cuib">Gavriil Musicescu,Nr. 14,CP 700127</string>
+    <string name="phone_restaurant_cuib">0743604229</string>
+    <string name="adress_restaurant_innitalia">Piata Unirii,Nr. 2,CP 238901</string>
+    <string name="phone_restaurant_innitalia">0232273951</string>
+    <string name="adress_restaurant_laconac">Strada Gane Nicolae,Nr. 27,CP 700110</string>
+    <string name="phone_restaurant_laconac">0746279893</string>
+    <string name="adress_restaurant_mamma_mia">Bulevard Stefan cel Mare si Sfant,Nr 17, CP 700124</string>
+    <string name="phone_restaurant_mamma_mia">0762662642</string>
+    <string name="phone_club_coopers_lounge">0758104822</string>
+    <string name="phone_club_fratelli">0758104822</string>
+    <string name="phone_club_skin">0748130500</string>
+    <string name="phone_club_babylon">0751606843</string>
+    <string name="phone_club_master">0724783123</string>
+    <string name="phone_room_master_escape">0740505753</string>
+    <string name="phone_zero_gravity_climbing">0734011115</string>
+    <string name="phone_room_madscape">0799459859</string>
+    <string name="phone_hotel_international">0332110060</string>
+    <string name="phone_hotel_pleiada">0332425425</string>
+    <string name="phone_hotel_bellaria">0332233870</string>
+    <string name="phone_hotel_il_primo">0723206865</string>
+    <string name="phone_hotel_belleville">0743222242</string>
+    <string name="phone_hotel_hampton_by_hilton_iasi">0232242000</string>
+    <string name="phone_hotel_ildis">0232447777</string>
+    <string name="phone_hotel_unirea_hotel_spa">0232205000</string>
 </resources>
